# shard-hatepad

./: Cargo.toml
src/: client.rs  server.rs
